--- a/TodoTree/index.html
+++ b/TodoTree/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Backbone.js</title>
+    <title>The Forest</title>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -22,7 +22,7 @@
     <div id="todoapp">
 
       <div class="title">
-        <h1>The forest</h1>
+        <h1>The Forest (iterative)</h1>
       </div>
 
       <div class="content">
@@ -49,6 +49,8 @@
       Blue button - shows/hides children.<br />
       Double click on object - edit text.<br />
       The data is stored in local storage.<br />
+      <br />
+      Multibrowser support, but tested on Chrome v35 and IE11<br />
     </div>
   
     <div id="credits">
